[tool.poetry]
name = "hazel"
version = "0.1.dev0"
description = "A reusable toolkit library for desktop and web applications"
authors = ["Abdul-Hakeem Shaibu <hkmshb@gmail.com>"]
keywords = ["hazel", "toolkit"]
license = "BSD-2-Clause"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.6"

[tool.poetry.dev-dependencies]
pytest = "^3.5"
pytest-cov = "^2.5"
